// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> matches snapshot with \`inline\` = true 1`] = `
<div>
  <div
    class="css-1nlf3s5-checkboxContainer-checkboxContainer"
  >
    <input
      id="testId"
      name="testName"
      type="checkbox"
      value="testValue"
    />
    <label
      for="testId"
    >
      <span
        aria-hidden="true"
        class="shadow-element"
        tabindex="-1"
      />
      Test label
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> matches snapshot with \`lg\` size 1`] = `
<div>
  <div
    class="css-1osisy2-checkboxContainer-checkboxContainer"
  >
    <input
      id="testId"
      name="testName"
      type="checkbox"
      value="testValue"
    />
    <label
      for="testId"
    >
      <span
        aria-hidden="true"
        class="shadow-element"
        tabindex="-1"
      />
      Test label
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> matches snapshot with \`md\` size 1`] = `
<div>
  <div
    class="container-class css-4kodn0-checkboxContainer-checkboxContainer"
    id="my-container-id"
  >
    <input
      class="checkbox"
      id="my-id"
      name="testName"
      type="checkbox"
      value="testValue"
    />
    <label
      for="my-id"
    >
      <span
        aria-hidden="true"
        class="shadow-element"
        tabindex="-1"
      />
      Test label
    </label>
  </div>
</div>
`;
